benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix024_power.oepc_pso.oepc_rmo.oepc_tso.oepc_tso.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix024_power.oepc_pso.oepc_rmo.oepc_tso.oepc_tso.opt.yml/mix024_power.oepc_pso.oepc_rmo.oepc_tso.oepc_tso.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix024_power.oepc_pso.oepc_rmo.oepc_tso.oepc_tso.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_9qhoaosu/tmp/tmp8zpbx2f7.c
Compilation started
/tmp/BenchExec_run_9qhoaosu/tmp/tmp8zpbx2f7.c: In function ‘P2’:
/tmp/BenchExec_run_9qhoaosu/tmp/tmp8zpbx2f7.c:636:19: error: ‘FALSE’ undeclared (first use in this function)
  636 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_9qhoaosu/tmp/tmp8zpbx2f7.c:636:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
